using System;
using UnityEngine;

namespace Safari.Model.Rangers
{
    public class Ranger
    {
        public event EventHandler? Died;

        public Ranger() { }
    }
}
